Fix for ML bar not being visible

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -431,6 +431,16 @@ div.widget .extendednavigation > ul, div.widget.extendednavigation > ul {
 	width: 100%;
 }
 
+.language-selector {
+	position: relative;
+	z-index: 1;
+}
+
+.language-selector + #wrap #main {
+	margin-top: 35px;
+	padding-top: 0;
+}
+
 /* 6. Footer */
 
 .bk-footer {
